@@ -19,6 +19,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * convert indented codeblock to literal (indented) paragraph
 * change separator comment from //- to //
 * mark br converted from HTML br element
+* round CSS width value for image
 * upgrade Kramdown to 1.17.0
 
 == 1.0.0.alpha.3 (2018-05-31) - @mojavelinux
